--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
                 <version>4.13.2</version>
                 <scope>test</scope>
             </dependency>
-            <dependency>
+
                 <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
                 <dependency>
                     <groupId>org.apache.poi</groupId>
@@ -46,24 +46,21 @@
                     <version>5.2.3</version>
                 </dependency>
 
-            </dependency>
-            <dependency>
-                <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
-                <dependency>
-                    <groupId>org.apache.poi</groupId>
-                    <artifactId>poi-ooxml</artifactId>
-                    <version>5.2.3</version>
-                </dependency>
 
-            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
             <dependency>
-                <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
-                <dependency>
-                    <groupId>org.apache.poi</groupId>
-                    <artifactId>poi-ooxml</artifactId>
-                    <version>5.2.3</version>
-                </dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>5.2.3</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.github.javafaker</groupId>
+                <artifactId>javafaker</artifactId>
+                <version>1.0.2</version>
+            </dependency>
+
 
         </dependencies>
 
